1. replace PerevalAddedViewset on PerevalAddedApiView with get and post methods
