# fstr_api/api/views.py
@@ -17,6 +17,7 @@ class UsersApiView(APIView):
 
     def post(self, request, *args, **kwargs):
         data = {'email': request.data.get('email'),
+                'phone': request.data.get('phone'),
                 'name': request.data.get('name')}
         serializer = UsersSerializer(data=data)
         if serializer.is_valid():
@@ -33,7 +34,6 @@ class CoordsApiView(APIView):
         return Response(serializer.data, status=status.HTTP_200_OK)
 
     def post(self, request, *args, **kwargs):
-        print(request.__dict__)
         data = {'latitude': request.data.get('latitude'),
                 'longitude': request.data.get('longitude'),
                 'height': request.data.get('height')}
@@ -44,9 +44,29 @@ class CoordsApiView(APIView):
         return Response(serializer.errors, status=status.HTTP_400_BAD_REQUEST)
 
 
-class PerevalAddedViewset(viewsets.ModelViewSet):
-    queryset = PerevalAdded.objects.all()
-    serializer_class = PerevalAddedSerializer
+class PerevalAddedApiView(APIView):
+
+    def get(self, request, *args, **kwargs):
+        pereval_added = PerevalAdded.objects.all()
+        serializer = PerevalAddedSerializer(pereval_added, many=True)
+        return Response(serializer.data, status=status.HTTP_200_OK)
+
+    def post(self, request, *args, **kwargs):
+        data = {'user_id': request.data.get('user_id'),
+                'beautyTitle': request.data.get('beautyTitle'),
+                'title': request.data.get('title'),
+                'other_titles': request.data.get('other_titles'),
+                'level': request.data.get('level'),
+                'connect': request.data.get('connect'),
+                'date_added': request.data.get('date_added'),
+                'add_first_time': request.data.get('add_first_time'),
+                'coord_id': request.data.get('coord_id'),
+                'status': request.data.get('status')}
+        serializer = PerevalAddedSerializer(data=data)
+        if serializer.is_valid():
+            serializer.save()
+            return Response(serializer.data, status=status.HTTP_201_CREATED)
+        return Response(serializer.errors, status=status.HTTP_400_BAD_REQUEST)
 
 
 class ImagesViewset(viewsets.ModelViewSet):
